--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
 # syntax = docker/dockerfile:experimental
 #
 # This file can build images for cpu and gpu env. By default it builds image for CPU.
-# Use following option to build image for cuda/GPU: --build-arg BASE_IMAGE=nvidia/cuda:10.1-cudnn7-runtime-ubuntu18.04
+# Use following option to build image for cuda/GPU: --build-arg BASE_IMAGE=nvidia/cuda:10.1-cudnn7-runtime-ubuntu20.04
 # Here is complete command for GPU/cuda - 
-# $ DOCKER_BUILDKIT=1 docker build --file Dockerfile --build-arg BASE_IMAGE=nvidia/cuda:10.1-cudnn7-runtime-ubuntu18.04 -t torchserve:latest .
+# $ DOCKER_BUILDKIT=1 docker build --file Dockerfile --build-arg BASE_IMAGE=nvidia/cuda:10.1-cudnn7-runtime-ubuntu20.04 -t torchserve:latest .
 #
 # Following comments have been shamelessly copied from https://github.com/pytorch/pytorch/blob/master/Dockerfile
 # 
@@ -16,20 +16,23 @@
 #           https://docs.docker.com/develop/develop-images/build_enhancements/
 
 
-ARG BASE_IMAGE=ubuntu:18.04
+ARG BASE_IMAGE=ubuntu:20.04
 
 FROM ${BASE_IMAGE} AS compile-image
-ARG BASE_IMAGE=ubuntu:18.04
+ARG BASE_IMAGE=ubuntu:20.04
 ENV PYTHONUNBUFFERED TRUE
 
 RUN --mount=type=cache,id=apt-dev,target=/var/cache/apt \
-    apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+    apt-get update 
+RUN DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y software-properties-common
+RUN add-apt-repository ppa:deadsnakes/ppa
+RUN DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y python3.9
+RUN DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     ca-certificates \
     g++ \
-    python3-dev \
+    python3.9-dev \
     python3-distutils \
-    python3-venv \
+    python3.9-venv \
     openjdk-11-jre-headless \
     curl \
     && rm -rf /var/lib/apt/lists/* \
@@ -37,12 +40,12 @@ RUN --mount=type=cache,id=apt-dev,target=/var/cache/apt \
     && curl -O https://bootstrap.pypa.io/get-pip.py \
     && python3 get-pip.py
 
-RUN python3 -m venv /home/venv
-
+RUN python3.9 -m venv /home/venv
 ENV PATH="/home/venv/bin:$PATH"
 
-RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1 \
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.9 1 \
     && update-alternatives --install /usr/local/bin/pip pip /usr/local/bin/pip3 1
+
 
 # This is only useful for cuda env
 RUN export USE_CUDA=1
@@ -52,16 +55,16 @@ ARG CUDA_VERSION=""
 RUN TORCH_VER=$(curl --silent --location https://pypi.org/pypi/torch/json | python -c "import sys, json, pkg_resources; releases = json.load(sys.stdin)['releases']; print(sorted(releases, key=pkg_resources.parse_version)[-1])") && \
     TORCH_VISION_VER=$(curl --silent --location https://pypi.org/pypi/torchvision/json | python -c "import sys, json, pkg_resources; releases = json.load(sys.stdin)['releases']; print(sorted(releases, key=pkg_resources.parse_version)[-1])") && \
     if echo "$BASE_IMAGE" | grep -q "cuda:"; then \
-        # Install CUDA version specific binary when CUDA version is specified as a build arg
-        if [ "$CUDA_VERSION" ]; then \
-            pip install --no-cache-dir torch==$TORCH_VER+$CUDA_VERSION torchvision==$TORCH_VISION_VER+$CUDA_VERSION -f https://download.pytorch.org/whl/torch_stable.html; \
-        # Install the binary with the latest CUDA version support
-        else \
-            pip install --no-cache-dir torch torchvision; \
-        fi \
+    # Install CUDA version specific binary when CUDA version is specified as a build arg
+    if [ "$CUDA_VERSION" ]; then \
+    pip install --no-cache-dir torch==$TORCH_VER+$CUDA_VERSION torchvision==$TORCH_VISION_VER+$CUDA_VERSION -f https://download.pytorch.org/whl/torch_stable.html; \
+    # Install the binary with the latest CUDA version support
+    else \
+    pip install --no-cache-dir torch torchvision; \
+    fi \
     # Install the CPU binary
     else \
-        pip install --no-cache-dir torch==$TORCH_VER+cpu torchvision==$TORCH_VISION_VER+cpu -f https://download.pytorch.org/whl/torch_stable.html; \
+    pip install --no-cache-dir torch==$TORCH_VER+cpu torchvision==$TORCH_VISION_VER+cpu -f https://download.pytorch.org/whl/torch_stable.html; \
     fi
 RUN pip install --no-cache-dir captum torchtext torchserve torch-model-archiver
 
@@ -71,16 +74,19 @@ FROM ${BASE_IMAGE} AS runtime-image
 ENV PYTHONUNBUFFERED TRUE
 
 RUN --mount=type=cache,target=/var/cache/apt \
-    apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
-    python3 \
+    apt-get update 
+RUN DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y software-properties-common
+RUN add-apt-repository ppa:deadsnakes/ppa
+RUN DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y python3.9
+RUN DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     python3-distutils \
-    python3-dev \
+    python3.9-dev \
     openjdk-11-jre-headless \
     build-essential \
     && rm -rf /var/lib/apt/lists/* \
     && cd /tmp
 
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.9 1 
 RUN useradd -m model-server \
     && mkdir -p /home/model-server/tmp
 
